--- a/frontend.html
+++ b/frontend.html
@@ -74,11 +74,11 @@
 <p><span class="badge badge-light">Dublin</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/reddit/jobs/1789024'>Job Application for Staff Frontend Engineer, Ads Engineering at Reddit</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/reddit/jobs/1789024'>Job Application for Staff Frontend Engineer, Ads Engineering at Reddit</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BloomforthCorp/743999692278959-sr-front-end-developer'>Bloomforth Corp Sr. Front End Developer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/BloomforthCorp/743999692278959-sr-front-end-developer'>Bloomforth Corp Sr. Front End Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Rockville, MD</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -98,7 +98,7 @@
 <p><span class="badge badge-light">Munich Munich</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/WJCompany/743999692248954-front-end-develeoper-bilingual-korea-english-'>Woongjin, Inc Front End Develeoper - Bilingual(Korea/English) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/WJCompany/743999692248954-front-end-develeoper-bilingual-korea-english-'>Woongjin, Inc Front End Develeoper - Bilingual(Korea/English) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -208,7 +208,7 @@
 <p><span class="badge badge-light">Cape Town Cape Town South Africa</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://activeprospect.applytojob.com/apply/9KN7fEO3Ur/Front-End-Software-Engineer-Remote-Ok'>Front End Software Engineer (Remote ok) - ActiveProspect, Inc. - Career Page</a></h5> 
+<h5><a href='http://activeprospect.applytojob.com/apply/9KN7fEO3Ur/Front-End-Software-Engineer-Remote-Ok'>Front End Software Engineer (Remote ok) - ActiveProspect, Inc. - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -222,7 +222,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://myndshft.workable.com/j/B5B2B005D8'>Myndshft - Jobs: Senior Front-end Developer - Apply online</a></h5> 
+<h5><a href='https://myndshft.workable.com/j/B5B2B005D8'>Myndshft - Jobs: Senior Front-end Developer - Apply online</a></h5> 
 <p><span class="badge badge-light">Mesa, Arizona</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -421,7 +421,7 @@ growth through Acorns' web frameworks, and other platform-based tools. Provide
 <p><span class="badge badge-light">Washington, DC Charlotte</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://springbokdigital.recruitee.com/o/senior-frontend-developer-mechelen'>
+<h5><a href='https://springbokdigital.recruitee.com/o/senior-frontend-developer-mechelen'>
       Senior Front-End Developer - Springbok
     </a></h5> 
 <p><span class="badge badge-light"></span></p>
